add back removal of journal dir; explicitly enable cloud-init services

--- a/Fedora_22_PVHVM.cfg
+++ b/Fedora_22_PVHVM.cfg
@@ -93,6 +93,9 @@ which
 # set bootable
 parted -s /dev/xvda set 1 boot on
 
+# If you want to remove rsyslog and just use journald, remove this!
+rmdir /var/log/journal/
+
 # this is installed by default but we don't need it in virt
 dnf -C -y remove linux-firmware
 
@@ -183,6 +186,12 @@ cat > /etc/systemd/system/cloud-init.service.d/delaystart.conf <<'EOF'
 [Service]
 ExecStartPre=/usr/bin/sleep 12
 EOF
+
+# F22 needs these explicitly enabled
+systemctl enable cloud-init
+systemctl enable cloud-init-local
+systemctl enable cloud-config
+systemctl enable cloud-final
 
 # some systemd workarounds
 sed -i 's/XenServer Virtual Machine Tools/xe-linux-distribution/g' /etc/init.d/xe-linux-distribution
