--- a/Red_Hat_Enterprise_Linux_6_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_6_PVHVM.cfg
@@ -220,6 +220,9 @@ EOF
 # nova-agent sad panda hack -- add a delay to nova-agent startup to allow it to setup the network
 sed -i '/touch $lockfile/a \ \ \ \ sleep 12' /etc/init.d/nova-agent
 
+# delay cloud-init start for RHN registration
+sed -i '/^start()/a \ \ \ \ sleep 60' /etc/init.d/cloud-init
+
 # update all
 yum -y update
 
