update location of XenServer Tools

--- a/CentOS_5.cfg
+++ b/CentOS_5.cfg
@@ -64,8 +64,8 @@ mkdir /tmp/tools-install
 cd /tmp/tools-install
 
 # install xen tools
-wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-6.1.0-1037.x86_64.rpm -O /tmp/tools-install/xe-guest-utilities.rpm
-wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-xenstore-6.1.0-1037.x86_64.rpm -O /tmp/tools-install/xe-guest-utilities-xenstore.rpm
+wget http://KICK_HOST/packages/xstools/6.1/xe-guest-utilities-6.1.0-1037.x86_64.rpm -O /tmp/tools-install/xe-guest-utilities.rpm
+wget http://KICK_HOST/packages/xstools/6.1/xe-guest-utilities-xenstore-6.1.0-1037.x86_64.rpm -O /tmp/tools-install/xe-guest-utilities-xenstore.rpm
 rpm -Uhv /tmp/tools-install/xe-guest-utilities*.rpm
 
 # install agent
