--- a/Scientific_Linux_7_PVHVM.cfg
+++ b/Scientific_Linux_7_PVHVM.cfg
@@ -177,8 +177,8 @@ mkdir /tmp/tmp
 cd /tmp/tmp
 
 # install xen tools
-wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-6.2.0-1120.x86_64.rpm
-wget http://ce3598b91333d7474379-b85ce4d8c2253d3876bef92f62a263f8.r84.cf5.rackcdn.com/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
+wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
+wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install agent
