be consistent about man pages

--- a/CentOS_5.cfg
+++ b/CentOS_5.cfg
@@ -44,9 +44,11 @@ bootloader --location=mbr  --append="console=xvc0"
 poweroff
 
 # Minimal package set
-%packages --excludedocs --nobase
+%packages --nobase
 @core
 kernel-xen
+man
+man-pages
 grub
 rsync
 tar
