--- a/CentOS_6_PVHVM.cfg
+++ b/CentOS_6_PVHVM.cfg
@@ -46,9 +46,11 @@ bootloader --location=mbr --driveorder=xvda  --timeout=1
 shutdown
 
 # Minimal package set
-%packages --excludedocs --nobase
+%packages --nobase
 @core
 kernel
+man
+man-pages
 rsync
 tar
 wget
