--- a/Red_Hat_Enterprise_Linux_5.cfg
+++ b/Red_Hat_Enterprise_Linux_5.cfg
@@ -48,9 +48,11 @@ bootloader --location=mbr  --append="console=hvc0"
 poweroff
 
 # Minimal package set
-%packages --excludedocs --nobase
+%packages --nobase
 @core
 kernel-xen
+man
+man-pages
 grub
 rsync
 tar
