--- a/Red_Hat_Enterprise_Linux_6.cfg
+++ b/Red_Hat_Enterprise_Linux_6.cfg
@@ -44,9 +44,11 @@ bootloader --timeout=1 --append="root=/dev/xvda1 console=hvc0"
 shutdown
 
 # Minimal package set
-%packages --excludedocs --nobase
+%packages --nobase
 @core
 kernel
+man
+man-pages
 rsync
 tar
 wget
