Update paths to XenServer Tools and rehost nova-agent

--- a/CentOS_6_PVHVM.cfg
+++ b/CentOS_6_PVHVM.cfg
@@ -145,15 +145,15 @@ mkdir /tmp/tmp
 cd /tmp/tmp
 
 # install xen tools
-#wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
-#wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
-wget http://KICK_HOST/packages/xstools/6.1/xe-guest-utilities-6.1.0-1037.x86_64.rpm
-wget http://KICK_HOST/packages/xstools/6.1/xe-guest-utilities-xenstore-6.1.0-1037.x86_64.rpm
+#wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
+#wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
+wget http://KICK_HOST/xstools/6.1/xe-guest-utilities-6.1.0-1037.x86_64.rpm
+wget http://KICK_HOST/xstools/6.1/xe-guest-utilities-xenstore-6.1.0-1037.x86_64.rpm
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install agent
 #wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
-wget https://github.com/carlwgeorge/nova-agent-rpm/releases/download/1.39.1-2/nova-agent-1.39.1-2.el6.x86_64.rpm -O nova-agent.rpm
+wget http://KICK_HOST/nova-agent/nova-agent-1.39.1-2.el6.x86_64.rpm -O nova-agent.rpm
 rpm -Uhv nova-agent.rpm
 
 # set some stuff
