--- a/CentOS_6_PVHVM_Hadoop_Ambari.cfg
+++ b/CentOS_6_PVHVM_Hadoop_Ambari.cfg
@@ -165,10 +165,10 @@ mkdir /tmp/tmp
 cd /tmp/tmp
 
 # install xen tools
-#wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
-#wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
-wget http://KICK_HOST/packages/xstools/6.1/xe-guest-utilities-6.1.0-1037.x86_64.rpm
-wget http://KICK_HOST/packages/xstools/6.1/xe-guest-utilities-xenstore-6.1.0-1037.x86_64.rpm
+#wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
+#wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
+wget http://KICK_HOST/xstools/6.1/xe-guest-utilities-6.1.0-1037.x86_64.rpm
+wget http://KICK_HOST/xstools/6.1/xe-guest-utilities-xenstore-6.1.0-1037.x86_64.rpm
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install agent
