--- a/Fedora_24_PVHVM.cfg
+++ b/Fedora_24_PVHVM.cfg
@@ -118,12 +118,12 @@ mkdir /tmp/tools-install
 cd /tmp/tools-install
 
 # install xen tools
-wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
-wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
+wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
+wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install nova-agent
-rpm -U https://github.com/carlwgeorge/nova-agent-rpm/releases/download/1.39.1-2/nova-agent-1.39.1-2.fc24.x86_64.rpm
+rpm -U http://KICK_HOST/nova-agent/nova-agent-1.39.1-2.fc24.x86_64.rpm
 systemctl enable nova-agent
 
 
