--- a/Ubuntu_15.04_PVHVM.cfg
+++ b/Ubuntu_15.04_PVHVM.cfg
@@ -103,7 +103,7 @@ mkdir /tmp/tmp
 cd /tmp/tmp
 
 # install xen tools
-wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities_6.2.0-1120_amd64.deb
+wget http://KICK_HOST/xstools/6.2/xe-guest-utilities_6.2.0-1120_amd64.deb
 dpkg -i xe-guest-utilities_6.2.0-1120_amd64.deb
 
 # install agent
