--- a/CentOS_5.cfg
+++ b/CentOS_5.cfg
@@ -66,12 +66,12 @@ mkdir /tmp/tools-install
 cd /tmp/tools-install
 
 # install xen tools
-wget http://KICK_HOST/packages/xstools/6.1/xe-guest-utilities-6.1.0-1037.x86_64.rpm -O /tmp/tools-install/xe-guest-utilities.rpm
-wget http://KICK_HOST/packages/xstools/6.1/xe-guest-utilities-xenstore-6.1.0-1037.x86_64.rpm -O /tmp/tools-install/xe-guest-utilities-xenstore.rpm
+wget http://KICK_HOST/xstools/6.1/xe-guest-utilities-6.1.0-1037.x86_64.rpm -O /tmp/tools-install/xe-guest-utilities.rpm
+wget http://KICK_HOST/xstools/6.1/xe-guest-utilities-xenstore-6.1.0-1037.x86_64.rpm -O /tmp/tools-install/xe-guest-utilities-xenstore.rpm
 rpm -Uhv /tmp/tools-install/xe-guest-utilities*.rpm
 
 # install agent
-wget https://github.com/carlwgeorge/nova-agent-rpm/releases/download/1.39.1-2/nova-agent-1.39.1-2.el5.x86_64.rpm -O /tmp/tools-install/nova-agent.rpm
+wget http://KICK_HOST/nova-agent/nova-agent-1.39.1-2.el5.x86_64.rpm -O /tmp/tools-install/nova-agent.rpm
 rpm -U /tmp/tools-install/nova-agent.rpm
 
 #cat >> /etc/modprobe.d/blacklist <<EOF
