--- a/CentOS_7_PVHVM_NovaAgent2.cfg
+++ b/CentOS_7_PVHVM_NovaAgent2.cfg
@@ -201,8 +201,8 @@ enabled_metadata=1
 EOF
 
 # install xen tools
-wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
-wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
+wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
+wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
 rpm -Uhv xe-guest-utilities*.rpm
 
 yum install -y nova-agent
