--- a/Debian_Testing_PVHVM.cfg
+++ b/Debian_Testing_PVHVM.cfg
@@ -90,7 +90,7 @@ d-i popularity-contest popularity-contest/participate boolean false
 
 d-i preseed/late_command string rm -f /usr/lib/finish-install.d/55netcfg-copy-config;\
 in-target mkdir /tmp/tmp;\
-in-target wget -O /tmp/tmp/xe-guest-utilities_6.2.0-1120_amd64.deb http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities_6.2.0-1120_amd64.deb;\
+in-target wget -O /tmp/tmp/xe-guest-utilities_6.2.0-1120_amd64.deb http://KICK_HOST/xstools/6.2/xe-guest-utilities_6.2.0-1120_amd64.deb;\
 in-target wget -O /tmp/tmp/nova-agent_1.39.1_all.deb https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent_1.39.1_all.deb;\
 in-target dpkg -iR /tmp/tmp;\
 #in-target apt-get update;\
