--- a/Red_Hat_Enterprise_Linux_7_PVHVM_Restricted.cfg
+++ b/Red_Hat_Enterprise_Linux_7_PVHVM_Restricted.cfg
@@ -184,8 +184,8 @@ mkdir /tmp/tmp
 cd /tmp/tmp
 
 # install xen tools
-wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
-wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
+wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
+wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install agent
