--- a/Scientific_Linux_7_PVHVM.cfg
+++ b/Scientific_Linux_7_PVHVM.cfg
@@ -177,13 +177,13 @@ mkdir /tmp/tmp
 cd /tmp/tmp
 
 # install xen tools
-wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
-wget http://KICK_HOST/packages/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
+wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
+wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install agent
 #wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
-rpm -U https://github.com/carlwgeorge/nova-agent-rpm/releases/download/1.39.1-2/nova-agent-1.39.1-2.el7.x86_64.rpm
+rpm -U http://KICK_HOST/nova-agent/nova-agent-1.39.1-2.el7.x86_64.rpm
 systemctl enable nova-agent
 
 # set some stuff
