--- a/Debian_8_PVHVM.cfg
+++ b/Debian_8_PVHVM.cfg
@@ -67,7 +67,7 @@ tasksel tasksel/first multiselect minimal
 
 ### Package selection
 cloud-init cloud-init/datasources multiselect None, ConfigDrive
-d-i pkgsel/include string openssh-server rsync sudo wget curl parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot
+d-i pkgsel/include string openssh-server man-db manpages manpages-dev rsync sudo wget curl parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
