be consistent about man pages (Scientific Linux)

--- a/Scientific_Linux_6_PVHVM.cfg
+++ b/Scientific_Linux_6_PVHVM.cfg
@@ -45,9 +45,11 @@ bootloader --timeout=1 --append="root=/dev/xvda1 console=hvc0 selinux=0"
 shutdown
 
 # Minimal package set
-%packages --excludedocs --nobase
+%packages --nobase
 @core
 kernel
+man
+man-pages
 epel-release
 rsync
 tar
