move sysctl setting to custom tuned profile

--- a/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
@@ -208,21 +208,32 @@ chkconfig nova-agent on
 #cp /usr/share/nova-agent/1.39.1/etc/systemd/system/nova-agent.service /etc/systemd/system/nova-agent.service
 #systemctl enable -f nova-agent.service
 
-# set some stuff
-echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
-echo 'vm.swappiness = 0' >> /etc/sysctl.conf
-echo 'net.ipv6.conf.eth0.disable_ipv6 = 0' >> /etc/sysctl.conf
-echo 'net.ipv6.conf.eth1.disable_ipv6 = 0' >> /etc/sysctl.conf
 
-cat >> /etc/sysctl.conf <<'EOF'
+# system tweaks go in a custom tuned profile
+mkdir -p /etc/tuned/rax-cloud
+cat > /etc/tuned/rax-cloud/tuned.conf<<'EOF'
+#
+# tuned configuration for Rackspace Cloud
+#
+
+[main]
+include=throughput-performance
+
+[sysctl]
+net.ipv4.conf.eth0.arp_notify = 1
 net.ipv4.tcp_rmem = 4096 87380 33554432
 net.ipv4.tcp_wmem = 4096 65536 33554432
-net.core.rmem_max = 33554432
-net.core.wmem_max = 33554432
 net.ipv4.tcp_window_scaling = 1
 net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_sack = 1
+net.ipv6.conf.eth0.disable_ipv6 = 0
+net.ipv6.conf.eth1.disable_ipv6 = 0
+net.core.rmem_max = 33554432
+net.core.wmem_max = 33554432
+vm.swappiness = 0
+vm.dirty_ratio = 30
 EOF
+echo "rax-cloud" > /etc/tuned/active_profile
 
 # our fstab is fonky
 cat > /etc/fstab <<'EOF'
