--- a/CentOS_7_PVHVM.cfg
+++ b/CentOS_7_PVHVM.cfg
@@ -181,29 +181,9 @@ wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-6.2.0-1120.x86_64.rpm
 wget http://KICK_HOST/xstools/6.2/xe-guest-utilities-xenstore-6.2.0-1120.x86_64.rpm
 rpm -Uhv xe-guest-utilities*.rpm
 
-# install agent
-wget https://github.com/rackerlabs/openstack-guest-agents-unix/releases/download/1.39.1/nova-agent-1.39-1.x86_64.rpm
-rpm -Uhv nova-agent*
-
-# cent/rhel 7 kernel fixes, otherwise systemd-python breaks nova-agent
-cat > /usr/lib/systemd/system/nova-agent.service <<'EOF'
-[Unit]
-Description=nova-agent service
-After=xe-linux-distribution.service
-[Service]
-EnvironmentFile=/etc/nova-agent.env
-ExecStart=/usr/sbin/nova-agent -n -l info /usr/share/nova-agent/nova-agent.py
-[Install]
-WantedBy=multi-user.target
-EOF
-
-cat > /etc/nova-agent.env <<'EOF'
-LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:/usr/share/nova-agent/1.39.1/lib"
-PYTHONPATH="${PYTHONPATH}:/usr/share/nova-agent/1.39.1/lib/python2.6/site-packages:/usr/share/nova-agent/1.39.1/lib/python2.6/"
-EOF
-
-systemctl daemon-reload
-chkconfig nova-agent on
+# install nova-agent
+rpm -U http://KICK_HOST/nova-agent/nova-agent-1.39.1-2.el7.x86_64.rpm
+systemctl enable nova-agent
 
 # system tweaks go in a custom tuned profile
 mkdir -p /etc/tuned/rax-cloud
