clean up log truncation

--- a/CentOS_7_PVHVM.cfg
+++ b/CentOS_7_PVHVM.cfg
@@ -327,9 +327,8 @@ touch /etc/resolv.conf
 rm -f /etc/sysconfig/network-scripts/ifcfg-eth0
 rm -rf /var/var
 rm -rf /var/log/anaconda/
-for k in $(find /var/log -type f); do truncate -s 0 $k; done
-for k in $(find /tmp -type f); do rm -f $k; done
-# watch these lines, causing kick problems
-#for k in $(find /root -type f \ ( ! -iname ".*" \)); do rm -f $k; done
+find /var/log -type f -exec truncate -s0 {} \;
+find /tmp -type f -delete
+find /root -type f ! -iname ".*" -delete
 
 %end
