--- a/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
@@ -317,10 +317,9 @@ rm -f /root/.lesshst
 rm -f /root/.ssh/known_hosts
 rm -rf /tmp/tmp
 rm -rf /var/log/anaconda/
-for k in $(find /var/log -type f); do truncate -s 0 $k; done
-for k in $(find /tmp -type f); do rm -f $k; done
 rm -f /etc/yum.repos.d/rhel-source.repo
-# watch these lines, causing kick problems
-for k in $(find /root -type f \ ( ! -iname ".*" \)); do rm -f $k; done
+find /var/log -type f -exec truncate -s0 {} \;
+find /tmp -type f -delete
+find /root -type f ! -iname ".*" -delete
 
 %end
