remove the RHEL source repo, and clean up repo file truncation

--- a/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
@@ -220,14 +220,6 @@ EOF
 #sed -i '/mirrorlist/s/^/#/' /etc/yum.repos.d/epel.repo
 #sed -i '/baseurl/s/# *//' /etc/yum.repos.d/epel.repo
 
-cat >> /etc/yum.repos.d/rhel-source.repo <<'EOF'
-[rhel-source]
-name=Red Hat Enterprise Linux $releasever - $basearch - Source
-bashurl=http://intra.mirror.rackspace.com/kickstart/rhel-x86_64-server-7/
-enabled=1
-gpgcheck=0
-EOF
-
 # our cloud-init config
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 datasource_list: [ ConfigDrive, None ]
@@ -281,7 +273,7 @@ WantedBy=multi-user.target
 EOF
 
 # make sure repos are empty for rhel
-for k in $(find /etc/yum.repos.d -type f\( ! -name "*epel*" \)); do rm -f $k; done
+find /etc/yum.repos.d -type f ! -name "*epel*" -delete
 
 # force grub to use generic disk labels, bootloader above does not do this
 cat >> /etc/sysconfig/grub <<'EOF'
@@ -317,7 +309,6 @@ rm -f /root/.lesshst
 rm -f /root/.ssh/known_hosts
 rm -rf /tmp/tmp
 rm -rf /var/log/anaconda/
-rm -f /etc/yum.repos.d/rhel-source.repo
 find /var/log -type f -exec truncate -s0 {} \;
 find /tmp -type f -delete
 find /root -type f ! -iname ".*" -delete
