clean up cloud-init delay

--- a/CentOS_7_PVHVM.cfg
+++ b/CentOS_7_PVHVM.cfg
@@ -268,24 +268,11 @@ cloud_final_modules:
  - final-message
 EOF
 
-cat > /usr/lib/systemd/system/cloud-init-local.service <<'EOF'
-[Unit]
-Description=Initial cloud-init job (pre-networking)
-Wants=local-fs.target
-After=local-fs.target
-
+# if cloud-init starts before nova-agent configures the network many things fail, so we'll delay for a bit
+mkdir -p /etc/systemd/system/cloud-init.service.d
+cat > /etc/systemd/system/cloud-init.service.d/delaystart.conf <<'EOF'
 [Service]
-Type=oneshot
-ExecStartPre=/usr/bin/sleep 20
-ExecStart=/usr/bin/cloud-init init --local
-RemainAfterExit=yes
-TimeoutSec=0
-
-# Output needs to appear in instance console output
-StandardOutput=journal+console
-
-[Install]
-WantedBy=multi-user.target
+ExecStartPre=/usr/bin/sleep 12
 EOF
 
 # set rackspace mirrors
