--- a/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_7_PVHVM.cfg
@@ -251,25 +251,11 @@ EOF
 # update all
 yum -y update
 
-# cloud-init / nova-agent sad panda hack
-cat > /usr/lib/systemd/system/cloud-init-local.service <<'EOF'
-[Unit]
-Description=Initial cloud-init job (pre-networking)
-Wants=local-fs.target
-After=local-fs.target rc-local.service
-
+# if cloud-init starts before nova-agent configures the network many things fail, so we'll delay for a bit
+mkdir -p /etc/systemd/system/cloud-init.service.d
+cat > /etc/systemd/system/cloud-init.service.d/delaystart.conf <<'EOF'
 [Service]
-Type=oneshot
-ExecStartPre=/usr/bin/sleep 120
-ExecStart=/usr/bin/cloud-init init --local
-RemainAfterExit=yes
-TimeoutSec=0
-
-# Output needs to appear in instance console output
-StandardOutput=journal+console
-
-[Install]
-WantedBy=multi-user.target
+ExecStartPre=/usr/bin/sleep 12
 EOF
 
 # make sure repos are empty for rhel
