--- a/CentOS_7_PVHVM.cfg
+++ b/CentOS_7_PVHVM.cfg
@@ -81,7 +81,7 @@ EOF
 cp /etc/resolv.conf /mnt/sysimage/etc/resolv.conf
 %end
 
-%post --log=/var/log/post_install.log --interpreter /bin/bash
+%post --interpreter /bin/bash
 # setup systemd to boot to the right runlevel
 echo -n "Setting default runlevel to multiuser text mode"
 rm -f /etc/systemd/system/default.target
@@ -171,6 +171,10 @@ EOF
 # default of having /tmp on tmpfs.
 echo "Disabling tmpfs for /tmp."
 /usr/bin/systemctl mask tmp.mount
+
+# networking is handled by nova-agent
+systemctl mask NetworkManager
+systemctl mask NetworkManager-wait-online
 
 # tmp tmp
 mkdir /tmp/tmp
@@ -289,10 +293,6 @@ GRUB_DISABLE_LINUX_UUID="true"
 EOF
 grub2-mkconfig
 
-# fix dns as NetworkManager conflicts with Nova-Agent
-/usr/bin/systemctl mask NetworkManager-wait-online.service
-/usr/bin/systemctl mask NetworkManager.service
-
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_7_PVHVM
@@ -318,4 +318,10 @@ find /var/log -type f -exec truncate -s0 {} \;
 find /tmp -type f -delete
 find /root -type f ! -iname ".*" -delete
 
+%end
+
+# no need to keep Anaconda logs on every cloud server
+%pre
+rm -f /usr/share/anaconda/post-scripts/99-copy-logs.ks
+rm -f /root/anaconda-ks.cfg
 %end
