--- a/Scientific_Linux_7_PVHVM.cfg
+++ b/Scientific_Linux_7_PVHVM.cfg
@@ -186,19 +186,28 @@ rpm -Uhv xe-guest-utilities*.rpm
 rpm -U http://KICK_HOST/nova-agent/nova-agent-1.39.1-2.el7.x86_64.rpm
 systemctl enable nova-agent
 
-# set some stuff
-echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
-echo 'vm.swappiness = 0' >> /etc/sysctl.conf
+# system tweaks go in a custom tuned profile
+mkdir -p /etc/tuned/rax-cloud
+cat > /etc/tuned/rax-cloud/tuned.conf<<'EOF'
+#
+# tuned configuration for Rackspace Cloud
+#
+[main]
+include=throughput-performance
 
-cat >> /etc/sysctl.conf <<'EOF'
+[sysctl]
+net.ipv4.conf.eth0.arp_notify = 1
 net.ipv4.tcp_rmem = 4096 87380 33554432
 net.ipv4.tcp_wmem = 4096 65536 33554432
-net.core.rmem_max = 33554432
-net.core.wmem_max = 33554432
 net.ipv4.tcp_window_scaling = 1
 net.ipv4.tcp_timestamps = 1
 net.ipv4.tcp_sack = 1
+net.core.rmem_max = 33554432
+net.core.wmem_max = 33554432
+vm.swappiness = 0
+vm.dirty_ratio = 30
 EOF
+echo "rax-cloud" > /etc/tuned/active_profile
 
 # our fstab is fonky
 cat > /etc/fstab <<'EOF'
@@ -316,7 +325,6 @@ rm -rf /tmp/tmp
 rm -f /etc/resolv.conf
 touch /etc/resolv.conf
 rm -f /etc/sysconfig/network-scripts/ifcfg-eth0
-rm -f /root/anaconda-ks.cfg
 rm -rf /var/var
 find /var/log -type f -exec truncate -s 0 {} \;
 find /tmp -type f -delete
