Revert "Merge pull request #37 from rackerlabs/add-OM-pw-support"
This reverts commit b55f3a6a68de9902de9afc3a6ccd7dcffbf4a87c, reversing
changes made to 2c10730971fe9a83ca8680dc523f15fb1d3cdee4.

--- a/Fedora_23_Teeth.cfg
+++ b/Fedora_23_Teeth.cfg
@@ -206,7 +206,7 @@ sed -i 's%cmd.append("-t")%#cmd.append("-t")%' /usr/lib/python3.4/site-packages/
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 datasource_list: [ ConfigDrive, None ]
 disable_root: False
-ssh_pwauth: True
+ssh_pwauth: False
 ssh_deletekeys: False
 resize_rootfs: noblock
 manage_etc_hosts: localhost
@@ -217,7 +217,7 @@ system_info:
   distro: fedora
   default_user:
     name: root
-    lock_passwd: False
+    lock_passwd: True
 
 cloud_config_modules:
  - disk_setup
@@ -350,6 +350,7 @@ echo "done"
 # clean up
 rm -f /etc/sysconfig/network-scripts/ifcfg-ens3
 passwd -d root
+passwd -l root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
 echo "" > /etc/machine-id
