--- a/CentOS_7_Teeth.cfg
+++ b/CentOS_7_Teeth.cfg
@@ -197,7 +197,7 @@ pip install --upgrade configobj
 
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
 disable_root: False
-ssh_pwauth: True
+ssh_pwauth: False
 ssh_deletekeys: False
 resize_rootfs: noblock
 manage_etc_hosts: localhost
@@ -208,7 +208,7 @@ system_info:
   distro: rhel
   default_user:
     name: root
-    lock_passwd: False
+    lock_passwd: True
 ssh_svcname: ssh
 mounts:
  - [ ephemeral0, null ]
@@ -300,6 +300,7 @@ bash package_postback.sh CentOS_7_Teeth
 
 # clean up
 passwd -d root
+passwd -l root
 yum clean all
 truncate -c -s 0 /var/log/yum.log
 echo "" > /etc/machine-id
