explicitly add python to package list

--- a/Debian_Unstable_PVHVM.cfg
+++ b/Debian_Unstable_PVHVM.cfg
@@ -64,7 +64,7 @@ tasksel tasksel/first multiselect minimal
 
 ### Package selection
 cloud-init cloud-init/datasources multiselect None, ConfigDrive
-d-i pkgsel/include string openssh-server man-db manpages manpages-dev rsync sudo wget curl parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot
+d-i pkgsel/include string python openssh-server man-db manpages manpages-dev rsync sudo wget curl parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
