Increase cloud-init delay to allow time for RHN registration; fully disable selinux

--- a/Red_Hat_Enterprise_Linux_6_PVHVM.cfg
+++ b/Red_Hat_Enterprise_Linux_6_PVHVM.cfg
@@ -223,7 +223,7 @@ EOF
 sed -i '/touch $lockfile/a \ \ \ \ sleep 12' /etc/init.d/nova-agent
 
 # delay cloud-init start for RHN registration
-sed -i '/^start()/a \ \ \ \ sleep 60' /etc/init.d/cloud-init
+sed -i '/^start()/a \ \ \ \ sleep 120' /etc/init.d/cloud-init
 
 # update all
 yum -y update
@@ -243,6 +243,9 @@ rpm -Uvh rhn-org-trusted-ssl-cert*
 chkconfig --del sshd
 sed -i 's/55/49/g' /etc/init.d/sshd
 chkconfig --add sshd
+
+## fully disable selinux
+sed -i -e 's/\(^SELINUX=\).*$/\1permissive/' /etc/selinux/config
 
 # log packages
 wget http://KICK_HOST/kickstarts/package_postback.sh
