--- a/Scientific_Linux_6_PVHVM.cfg
+++ b/Scientific_Linux_6_PVHVM.cfg
@@ -147,7 +147,7 @@ wget http://KICK_HOST/xstools/6.1/xe-guest-utilities-xenstore-6.1.0-1037.x86_64.
 rpm -Uhv xe-guest-utilities*.rpm
 
 # install agent
-rpm -U https://KICK_HOST/nova-agent/nova-agent-1.39.1-2.el6.x86_64.rpm
+rpm -U http://KICK_HOST/nova-agent/nova-agent-1.39.1-2.el6.x86_64.rpm
 
 # set some stuff
 echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
@@ -168,7 +168,7 @@ cat > /etc/fstab <<'EOF'
 # Accessible filesystems, by reference, are maintained under '/dev/disk'
 # See man pages fstab(5), findfs(8), mount(8) and/or blkid(8) for more info
 #
-/dev/xvda1		/                       ext3    defaults,noatime,barrier=0 1 1
+/dev/xvda1		/                       ext4    defaults,noatime,barrier=0 1 1
 tmpfs                   /dev/shm                tmpfs   defaults        0 0
 devpts                  /dev/pts                devpts  gid=5,mode=620  0 0
 sysfs                   /sys                    sysfs   defaults        0 0
