adjust packages for cloud-init

--- a/CentOS_6_Teeth.cfg
+++ b/CentOS_6_Teeth.cfg
@@ -52,7 +52,7 @@ tar
 wget
 bind-utils
 curl
-cloud-init
+-cloud-init
 cloud-utils
 cloud-utils-growpart
 dracut-modules-growroot
@@ -60,6 +60,10 @@ yum-plugin-versionlock
 #pyserial
 python-jinja2
 python-oauth
+python-importlib
+python-prettytable
+python-configobj
+python-jsonpatch
 rsyslog
 python-pip
 mdadm
