CentOS 6 OnMetal kickstart cleanup

--- a/CentOS_6_Teeth.cfg
+++ b/CentOS_6_Teeth.cfg
@@ -44,7 +44,7 @@ bootloader --timeout=1 --append="root=/dev/sda1 console=ttyS0,115200n8 console=t
 poweroff
 
 # Minimal package set
-%packages --excludedocs --nobase
+%packages --nobase
 @core
 kernel
 rsync
@@ -84,6 +84,5 @@ cd /tmp/tmp
 wget http://KICK_HOST/kickstarts/CentOS_6_Teeth_post.sh
 chmod +x CentOS_6_Teeth_post.sh
 bash -x CentOS_6_Teeth_post.sh
-for k in $(find /var/log -type f); do echo > $k; done
 ) 2>&1 | /usr/bin/tee /var/log/post_install_chvt.log
 chvt 1
