Added required rootpw parameter back to kickstart

--- a/CentOS_6_Teeth.cfg
+++ b/CentOS_6_Teeth.cfg
@@ -20,6 +20,10 @@ firewall --service=ssh
 timezone --utc Etc/UTC
 
 # Authentication
+## we later delete the root password and lock the root account, but we must
+## set a password here for the installer. generated randomly:
+##   pwgen -s 28 1 | openssl passwd -1 -stdin
+rootpw --iscrypted $1$FJeO5lB6$HJ4w2LR7Xn5zvgjL/IJNb/
 authconfig --enableshadow --passalgo=sha512
 
 # SELinux
