--- a/CentOS_7_Teeth.cfg
+++ b/CentOS_7_Teeth.cfg
@@ -4,9 +4,7 @@ cmdline
 
 # Install from a friendly mirror and add updates
 url --url="http://mirror.rackspace.com/centos/7/os/x86_64"
-#url --url=http://mirror.centos.org/centos-7/7/os/x86_64/
 repo --name=base --baseurl=http://mirror.rackspace.com/centos/7/os/x86_64/
-#repo --name=base --baseurl=http://mirror.centos.org/centos-7/7/os/x86_64/
 repo --name=epel --baseurl=http://mirror.rackspace.com/epel/7/x86_64/
 
 # Language and keyboard setup
@@ -34,7 +32,6 @@ services --disabled sendmail,NetworkManager
 # Disable anything graphical
 skipx
 text
-#graphical
 
 # Setup the disk
 zerombr
@@ -48,10 +45,6 @@ shutdown
 # Minimal package set
 %packages --ignoremissing
 @base
-# lean install options
-#%packages --excludedocs --nobase --ignoremissing
-#@core
-# leaving the rest below anyway
 kernel
 rsync
 tar
@@ -59,7 +52,7 @@ wget
 curl
 iptables-services
 # all below are required for cloud-init
-cloud-init
+#cloud-init
 cloud-utils
 cloud-utils-growpart
 yum-plugin-versionlock
@@ -67,14 +60,16 @@ epel-release
 python-devel
 python-requests
 python-prettytable
-#python-cheetah
 PyYAML
 net-tools
 qemu-img
 policycoreutils-python
 pyserial
-python-oauth2
+python-configobj
+python-oauth
 python-jinja2
+python-jsonpatch
+python-six
 python-requests-oauthlib
 rsyslog
 python-pip
@@ -87,38 +82,6 @@ mdadm
 
 # update all
 yum -y update
-
-# setup systemd to boot to the right runlevel
-echo -n "Setting default runlevel to multiuser text mode"
-rm -f /etc/systemd/system/default.target
-ln -s /lib/systemd/system/multi-user.target /etc/systemd/system/default.target
-
-# If you want to remove rsyslog and just use journald, remove this!
-echo -n "Disabling persistent journal"
-rmdir /var/log/journal/ 
-
-# this is installed by default but we don't need it in virt
-#echo "Removing linux-firmware package."
-#yum -C -y remove linux-firmware
-
-# Non-firewalld-firewall
-echo -n "Writing static firewall"
-cat > /etc/sysconfig/iptables <<'EOF'
-# Simple static firewall loaded by iptables.service. Replace
-# this with your own custom rules, run lokkit, or switch to 
-# shorewall or firewalld as your needs dictate.
-*filter
-:INPUT ACCEPT [0:0]
-:FORWARD ACCEPT [0:0]
-:OUTPUT ACCEPT [0:0]
--A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
--A INPUT -p icmp -j ACCEPT
--A INPUT -i lo -j ACCEPT
--A INPUT -m conntrack --ctstate NEW -m tcp -p tcp --dport 22 -j ACCEPT
--A INPUT -j REJECT --reject-with icmp-host-prohibited
--A FORWARD -j REJECT --reject-with icmp-host-prohibited
-COMMIT
-EOF
 
 echo -n "Getty fixes"
 # although we want console output going to the serial console, we don't
@@ -172,11 +135,10 @@ echo "Disabling tmpfs for /tmp."
 mkdir /tmp/tmp
 cd /tmp/tmp
 
-# set some stuff
-#echo 'net.ipv4.conf.eth0.arp_notify = 1' >> /etc/sysctl.conf
-#echo 'vm.swappiness = 0' >> /etc/sysctl.conf
-
+# network performance tweaks
 cat >> /etc/sysctl.conf <<'EOF'
+vm.swappiness = 0
+net.ipv4.conf.eth0.arp_notify = 1
 net.ipv4.tcp_rmem = 4096 87380 33554432
 net.ipv4.tcp_wmem = 4096 65536 33554432
 net.core.rmem_max = 33554432
@@ -188,14 +150,11 @@ vm.dirty_ratio=5
 EOF
 
 # teeth cloud-init
-#wget http://98f7490b5235468aa0c1-f20868e4072493c909d50c027a960948.r72.cf2.rackcdn.com/cloud-init-0.7.5-14rackspace.x86_64.rpm
-wget http://KICK_HOST/cloud-init/cloud-init-0.7.7-el7.fc22.noarch.rpm
-rpm -Uvh --nodeps cloud*.rpm
+yum -y install http://KICK_HOST/cloud-init/cloud-init-0.7.7-el7.fc22.noarch.rpm
 yum versionlock add cloud-init
-pip install --upgrade six
-pip install --upgrade configobj
 
 cat > /etc/cloud/cloud.cfg.d/10_rackspace.cfg <<'EOF'
+datasource_list: [ ConfigDrive, None ]
 disable_root: False
 ssh_pwauth: False
 ssh_deletekeys: False
@@ -243,15 +202,21 @@ cloud_init_modules:
  - ssh
 EOF
 
-# Work around cloud-init service not starting properly
-#sed -i 's|Type=oneshot|Type=simple|g' /usr/lib/systemd/system/cloud-init.service
-#sed -i 's|# Output needs to appear in instance console output|Restart=on-failure|g' /usr/lib/systemd/system/cloud-init.service
+# Fix for configobj parsing of metadata
+sed -i '/import sys/a reload(sys)\nsys.setdefaultencoding("Cp1252")' /usr/lib/python2.7/site-packages/configobj.py
 
 # Enable verbose logging in cloud-init
-sed -i 's/ - \[ \*log_base, \*log_syslog ]/# - \[ \*log_base, \*log_syslog ]/g' /etc/cloud/cloud.cfg.d/05_logging.cfg
+sed -i '/^ - \[ \*log_base, \*log_syslog ]/s/^/#/' /etc/cloud/cloud.cfg.d/05_logging.cfg
+
+systemctl enable cloud-init-local.service
+systemctl enable cloud-init.service
+systemctl enable cloud-config.service
+systemctl enable cloud-final.service
 
 # force grub to use generic disk labels, bootloader above does not do this
 cat >> /etc/sysconfig/grub <<'EOF'
+GRUB_TERMINAL_OUTPUT=serial
+GRUB_SERIAL_COMMAND="serial --speed=57600 --unit=0 --word=8 --parity=no --stop=1"
 GRUB_DISABLE_LINUX_UUID="true"
 GRUB_DEVICE_LABEL="root"
 EOF
@@ -289,34 +254,30 @@ wget http://KICK_HOST/kickstarts/package_postback.sh
 bash package_postback.sh CentOS_7_Teeth
 
 /usr/bin/systemctl disable NetworkManager.service
+/usr/bin/systemctl mask NetworkManager.service
 
 # set rackspace mirrors
-#sed -i 's%#baseurl.*%baseurl=http://mirror.rackspace.com/epel/7/x86_64/%g' /etc/yum.repos.d/epel.repo
-#sed -i 's/mirror.centos.org/mirror.rackspace.com/g' /etc/yum.repos.d/CentOS-Base.repo
-#sed -i '/#baseurl/s/# *//' /etc/yum.repos.d/CentOS-Base.repo
-#sed -i '/baseurl/s/# *//' /etc/yum.repos.d/epel.repo
-#sed -i '/mirrorlist/s/^/#/' /etc/yum.repos.d/CentOS-Base.repo
-#sed -i '/mirrorlist/s/^/#/' /etc/yum.repos.d/epel.repo
+sed -i '/^mirrorlist/s/^/#/' /etc/yum.repos.d/CentOS-*.repo /etc/yum.repos.d/epel*.repo
+sed -i '/^#baseurl/s/^#//' /etc/yum.repos.d/CentOS*.repo /etc/yum.repos.d/epel*.repo
+sed -i 's%mirror.centos.org%mirror.rackspace.com%g' /etc/yum.repos.d/CentOS*.repo
+sed -i 's%#baseurl.*%baseurl=http://mirror.rackspace.com/epel/7/x86_64/%g' /etc/yum.repos.d/epel*.repo
 
 # clean up
 passwd -d root
 passwd -l root
 yum clean all
-truncate -c -s 0 /var/log/yum.log
-echo "" > /etc/machine-id
-rm -f /root/anaconda-ks.cfg
 rm -f /etc/ssh/ssh_host_*
-echo "" > /etc/resolv.conf
+truncate -s0 /etc/machine-id
+truncate -s0 /etc/resolv.conf
 rm -f /root/.bash_history
 rm -f /root/.nano_history
 rm -f /root/.lesshst
 rm -f /root/.ssh/known_hosts
 rm -rf /tmp/tmp
 rm -rf /var/var/
-for k in $(find /var/log -type f); do echo > $k; done
-for k in $(find /tmp -type f); do rm -f $k; done
-# watch these lines, causing kick problems
-#for k in $(find /root -type f \ ( ! -iname ".*" \)); do rm -f $k; done
+find /var/log -type f -exec truncate -s0 {} \;
+find /tmp -type f -delete
+find /root -type f ! -iname ".*" -delete
 rm -f /etc/sysconfig/network-scripts/ifcfg-ens3
 
 %end
