Debian Testing OnMetal cloud-init tweaks and general cleanup

--- a/Debian_Testing_Teeth.cfg
+++ b/Debian_Testing_Teeth.cfg
@@ -36,7 +36,7 @@ d-i time/zone string Etc/UTC
 
 ### Apt setup
 d-i apt-setup/services-select multiselect security, updates
-d-i apt-setup/security_host string mirror.rackspace.com/debian-security
+#d-i apt-setup/security_host string mirror.rackspace.com/debian-security
 #d-i apt-setup/local0/repository string http://mirror.rackspace.com/debian/ wheezy-backports main
 d-i apt-setup/local0/source boolean true
 
@@ -68,7 +68,7 @@ tasksel tasksel/first multiselect minimal
 
 ### Package selection
 cloud-init cloud-init/datasources multiselect None, ConfigDrive
-d-i pkgsel/include string openssh-server sudo rsync wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl python3-serial python3-yaml python3-jinja2 python3-prettytable python3-oauthlib python3-configobj python3-requests python3-jsonpatch python3-six mdadm initramfs-tools less
+d-i pkgsel/include string openssh-server sudo rsync wget parted debconf-utils cloud-init cloud-initramfs-dyn-netconf cloud-initramfs-growroot ifenslave-2.6 vlan curl python3-serial python3-yaml python3-jinja2 python3-prettytable python3-oauthlib python3-configobj python3-requests python3-jsonpatch python3-six mdadm initramfs-tools man less
 
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
