Fix logging for cloud-init

--- a/Fedora_25_PVHVM.cfg
+++ b/Fedora_25_PVHVM.cfg
@@ -112,6 +112,9 @@ resize_rootfs: noblock
 network: { config: disabled }
 EOF
 
+# force cloud-init to log to files
+sed -i '/^ - \[ \*log_base, \*log_syslog ]/s/^/#/' /etc/cloud/cloud.cfg.d/05_logging.cfg
+
 #
 # install xen tools and nova agent
 #
